# drf-hw

./: README.md  pyproject.toml
config/: settings.py  urls.py
courses/: admin.py  models.py  urls.py
courses/migrations/: 0001_initial.py
lessons/: admin.py  models.py  urls.py  views.py
lessons/migrations/: 0001_initial.py  0002_lesson_course.py  0003_alter_lesson_lesson_video_reference.py
users/: admin.py  models.py  users.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_avatar_alter_user_first_name_and_more.py  0003_alter_user_first_name.py
